<resources>
    <string name="app_name">MideOKR</string>
    //Textos
    <string name="tituloPerfil">PERFIL DEL USUARIO</string>
    <string name="tituloRegistro">REGISTRO DE USUARIO</string>
    <string name="tituloInformes">MIS INFORMES</string>
    <string name="parrafo">Si no recuerda sus datos de acceso, usuario y/o contraseña, indíquenos su correo electrónico con el que se registró para indicarle sus credenciales</string>
    <string name="parrafo1">Valore nuestra aplicación según lo que considere a mejorar y deje un comentario</string>
    //Campos
    <string name="contraseña">Contraseña</string>
    <string name="olvido">He olvidado la contraseña</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="dni">DNI</string>
    //Botones
    <string name="atras">Atrás</string>
    <string name="registro">Registrar</string>
    <string name="entrar">Entrar</string>
    <string name="enviar">Enviar</string>
    <string name="perfil">Mi perfil</string>
    <string name="principal">Principal</string>
    <string name="proyectos">Mis proyectos</string>
    <string name="control">Control proyecto</string>
    <string name="feedback">Feedback</string>
    <string name="sesion">Cerrar sesión</string>
    <string name="guardar">Guardar</string>
    <string name="descargar">Descargar</string>
    <string name="calculo">Calcular días trabajo</string>
    <string name="comprobar">Comprobar estado</string>
    //Spinners
    <string name="spinner1">SELECCIONE PROYECTO</string>
    <string name="proyecto">Nombre del proyecto</string>

</resources>