<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/personalizado"
    tools:context=".Perfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloPerfil"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text" />

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/apellidos"
                android:inputType="text" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/contraseña"
                android:inputType="text" />

            <EditText
                android:id="@+id/etDni"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/dni"
                android:inputType="text" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/gris"
                android:ems="10"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/btnAtras"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gris"
                android:ems="10"
                android:text="@string/atras" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>