<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/personalizado"
    tools:context=".Home">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/tvNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnPrincipal"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tvEmail"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gris"
        android:ems="10"
        android:text="@string/principal"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btnPrincipal"
        android:backgroundTint="@color/gris"
        android:ems="10"
        android:text="@string/perfil"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnProyectos"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btnPerfil"
        android:backgroundTint="@color/gris"
        android:ems="10"
        android:text="@string/proyectos"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnControl"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/gris"
        android:layout_below="@+id/btnProyectos"
        android:ems="10"
        android:text="@string/control"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnFeedback"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnControl"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gris"
        android:ems="10"
        android:text="@string/feedback"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnSesion"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/gris"
        android:layout_below="@+id/btnFeedback"
        android:ems="10"
        android:text="@string/sesion"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>