<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/personalizado"
    tools:context=".Olvido">

    <TextView
        android:id="@+id/tvParrafo"
        android:layout_width="363dp"
        android:layout_height="144dp"
        android:text="@string/parrafo"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/tvParrafo"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/gris"
        android:ems="10"
        android:text="@string/enviar"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/gris"
        android:ems="10"
        android:text="@string/atras"
        android:layout_below="@+id/btnEnviar"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>